# nous

./: .gitignore  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 5b0be43e0ee1_switch_to_mysql_and_update_schema.py  a143ffdfe796_initial.py  bec8bb3b9a0b_initial_migration.py  c77c2b204099_initial.py
src/: bot.py  config.py  events.py  feature_loader.py  feature_manager.py
src/database/: manager.py
src/database/models/: base.py  settings.py  user.py
src/database/repositories/: base.py  permissions.py  settings.py  user.py
src/events/: __init__.py  bus.py  definitions.py  types.py
src/features/: __init__.py
src/features/blocklist/: cog.py
src/features/example/: cog.py
src/features/hot_reloader/: cog.py
src/features/llm/: __init__.py  cog.py  events.py  main.py
src/features/llm/memory/: short_term.py
src/features/settings/: cog.py
src/features/summary/: __init__.py  cog.py
src/helpers/llm/: __init__.py  google.py
src/providers/: __init__.py
src/providers/llm/: groq.py
src/services/: ai_provider.py  base.py  database.py  manager.py
src/storage/: events.py  interfaces.py  manager.py
src/storage/models/: __init__.py  base.py  permissions.py  settings.py
src/storage/repositories/: __init__.py  base.py  permissions.py  settings.py  user.py
src/storage/services/: base.py  cache.py  database.py  hybrid.py  memory.py  redis.py
src/utils/: decorators.py  error_handler.py  logging.py  permissions.py
src/utils/providers/: __init__.py  factory.py  groq.py
(+8 files in other folders)
